ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/Account_Tier_Movement__c.object-meta.xml
<CustomObject>
    <label>Account Tier Movement</label>
    <nameField>
        <displayFormat>ATM - {0}</displayFormat>
        <label>Account Tier Movement name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tier Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>