ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Applicable_Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>ATM_Applicable_Invoice_Year__c</fullName>
    <label>Applicable Invoice Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>