ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Applied_Benchmark_Value_Tier_2_High__c.field-meta.xml
<CustomField>
    <fullName>ATM_Applied_Benchmark_Value_Tier_2_High__c</fullName>
    <label>Applied Benchmark Value - Tier 2 - High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>