ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>ATM_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Tier Movements</relationshipLabel>
    <relationshipName>ATM_Account_Tier_Movements_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>