ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Contractor__c.field-meta.xml
<CustomField>
    <fullName>ATM_Contractor__c</fullName>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Tier Movements</relationshipLabel>
    <relationshipName>Account_Tier_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>