ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Contractor_Email__c.field-meta.xml
<CustomField>
    <fullName>ATM_Contractor_Email__c</fullName>
    <description>Email of Contractor to receive emails</description>
    <label>Contractor Email</label>
    <type>Email</type>
</CustomField>