ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Date_Present_Tier__c.field-meta.xml
<CustomField>
    <fullName>ATM_Date_Present_Tier__c</fullName>
    <label>Date Present Tier</label>
    <type>Date</type>
</CustomField>