ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Education_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>ATM_Education_Status_Report__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;00O1F000000lHdo&quot;, &quot;Click Here To View Report&quot; )</formula>
    <label>Education Status Report</label>
    <type>Text</type>
</CustomField>