ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Member_Since_Months__c.field-meta.xml
<CustomField>
    <fullName>ATM_Member_Since_Months__c</fullName>
    <label>Member Since (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>