ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Member_Since_Months_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>ATM_Member_Since_Months_For_Reporting__c</fullName>
    <description>Field for reporting purpose.</description>
    <formula>if(ATM_Member_Since_Months__c&lt;12,TEXT(ATM_Member_Since_Months__c),&quot;Full Year&quot; )</formula>
    <label>Member Since (Months)</label>
    <type>Text</type>
</CustomField>