ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Membership_Activated_On__c.field-meta.xml
<CustomField>
    <fullName>ATM_Membership_Activated_On__c</fullName>
    <formula>ATM_Contractor__r.IKOPRO_Approved_On__c</formula>
    <label>Membership Activated On</label>
    <type>Date</type>
</CustomField>