ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Override_Tier_Movement__c.field-meta.xml
<CustomField>
    <fullName>ATM_Override_Tier_Movement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Tier Movement</label>
    <type>Checkbox</type>
</CustomField>