ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Present_Tier__c.field-meta.xml
<CustomField>
    <fullName>ATM_Present_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligible Present Tier</label>
    <referenceTo>Tier__c</referenceTo>
    <relationshipLabel>Account Tier Movements</relationshipLabel>
    <relationshipName>ATM_Present_Tier_Tier</relationshipName>
    <type>Lookup</type>
</CustomField>