ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Prior_Tier__c.field-meta.xml
<CustomField>
    <fullName>ATM_Prior_Tier__c</fullName>
    <label>Prior Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>