ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Purchase_Square_Volume__c.field-meta.xml
<CustomField>
    <fullName>ATM_Purchase_Square_Volume__c</fullName>
    <description>Purchase Square Volume (from Member Start Date)</description>
    <label>Purchase Square Volume</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>