ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Reason_for_Tier_Change__c.field-meta.xml
<CustomField>
    <fullName>ATM_Reason_for_Tier_Change__c</fullName>
    <label>Reason for Tier Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>