ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Safety_Fundamentals_Completed__c.field-meta.xml
<CustomField>
    <fullName>ATM_Safety_Fundamentals_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Fundamentals Completed</label>
    <type>Checkbox</type>
</CustomField>