ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Sign_Up_Year__c.field-meta.xml
<CustomField>
    <fullName>ATM_Sign_Up_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign-Up Year</label>
    <type>Checkbox</type>
</CustomField>