ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Simulation__c.field-meta.xml
<CustomField>
    <fullName>ATM_Simulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simulation</label>
    <type>Checkbox</type>
</CustomField>