ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Status_Match_Applicant__c.field-meta.xml
<CustomField>
    <fullName>ATM_Status_Match_Applicant__c</fullName>
    <formula>ATM_Contractor__r.Status_Match__c</formula>
    <label>Status Match Applicant</label>
    <type>Checkbox</type>
</CustomField>