ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_Tier_Movement_Decision__c.field-meta.xml
<CustomField>
    <fullName>ATM_Tier_Movement_Decision__c</fullName>
    <label>Tier Movement Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceeded Sq. Purchase Volume</fullName>
            </value>
            <value>
                <fullName>Did Not Meet Minimum Sq. Purchase Volume</fullName>
            </value>
            <value>
                <fullName>Manual Tier Adjustment</fullName>
            </value>
            <value>
                <fullName>Maintained Sq. Purchase Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>