ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/ATM_TSR_Email__c.field-meta.xml
<CustomField>
    <fullName>ATM_TSR_Email__c</fullName>
    <description>Email Id of TSR to receive emails.</description>
    <label>TSR Email</label>
    <type>Email</type>
</CustomField>