ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/CommunityUrl_Contractors__c.field-meta.xml
<CustomField>
    <fullName>CommunityUrl_Contractors__c</fullName>
    <description>This is contractor partner community link for respective orgs.</description>
    <formula>&quot;https://www.ikoroofpro.com/s&quot;


/*

Community link for L4 : https://l4-iko.cs142.force.com/s/

Community link for LQA4 : https://lqa4-iko.cs142.force.com/s/

Community link for FULL: https://full-iko.cs142.force.com/s/

Community link for PRODUCTION: https://www.ikoroofpro.com/s/

*/</formula>
    <label>CommunityUrl_Contractors_NOT_IN_USE</label>
    <type>Text</type>
</CustomField>