ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/Eligible_Present_Tier_Formula__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Present_Tier_Formula__c</fullName>
    <formula>ATM_Present_Tier__r.Name</formula>
    <label>Eligible Present Tier Formula</label>
    <type>Text</type>
</CustomField>