ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/Loyalty_Program_Type_ATM__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Type_ATM__c</fullName>
    <description>This field is getting used in &quot;Process Builder - Account Tier Movement - CREATE&quot; for differentiating IKO and CRC.</description>
    <formula>TEXT(ATM_Contractor__r.Loyalty_Program_Type__c)</formula>
    <label>Loyalty Program Type (ATM)_NOT_IN_USE</label>
    <type>Text</type>
</CustomField>