ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/fields/TSR_Name__c.field-meta.xml
<CustomField>
    <fullName>TSR_Name__c</fullName>
    <formula>ATM_Contractor__r.Owner.FirstName + &quot; &quot; + ATM_Contractor__r.Owner.LastName</formula>
    <label>TSR Name_NOT_IN_USE</label>
    <type>Text</type>
</CustomField>