ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account_Tier_Movement__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>ATM_Contractor__c</columns>
    <columns>ATM_Simulation__c</columns>
    <columns>ATM_Present_Tier__c</columns>
    <columns>ATM_Prior_Tier__c</columns>
    <columns>ATM_Tier_Movement_Decision__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ATM_Purchase_Square_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>